BaseModal.tsx -> 공통 모달 생성 후 index.html에 모달 루트 만듦

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="modal-root"></div> //baseModal 등 전역 Portal 모달을 위한 DOM 루트 만들어두었습니다!    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
